force-app/main/default/objects/OAuth_Connection_Details__c/OAuth_Connection_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OAuth Connection Details for Case details</description>
    <label>OAuth Connection Details</label>
</CustomObject>