force-app/main/default/objects/OAuth_Connection_Details__c/fields/Client_Id_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_Secret__c</fullName>
    <label>Client Id Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>