force-app/main/default/objects/OAuth_Connection_Details__c/fields/Token_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint_Url__c</fullName>
    <label>Token Endpoint Url</label>
    <type>Url</type>
</CustomField>