force-app/main/default/objects/OAuth_Connection_Details__c/fields/Token_Refresh_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Token_Refresh_Interval_Minutes__c</fullName>
    <label>Token Refresh Interval (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>