force-app/main/default/objects/OAuth_Connection_Details__c/fields/Token_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Updated_Time__c</fullName>
    <label>Token Updated Time</label>
    <type>DateTime</type>
</CustomField>