force-app/main/default/objects/OAuth_Connection_Details__c/fields/Username_Password__c.field-meta.xml
<CustomField>
    <fullName>Username_Password__c</fullName>
    <label>Username Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>